[package]
name = "hl-copy-bot"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "hl-copy-bot"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1"
dotenvy = "0.15"
hyperliquid_rust_sdk = "0.6"
ethers = { version = "2.0", default-features = false, features = ["rustls"] }
thiserror = "1"
